fix(renovate): add mysql to excludePackageNames

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -64,6 +64,7 @@
             "enabled": true,
             "automerge": false,
             "matchPaths": [".github/**"],
+            "excludePackageNames": ["mysql"],
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "github-actions",
             "labels": ["github-action", "ci", "dependencies"],
