--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -24,7 +24,7 @@
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "composer",
             "labels": ["composer", "server", "dependencies"],
-            "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+            "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
         },
         {
             "enabled": true,
@@ -34,7 +34,7 @@
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "composer-dev",
             "labels": ["composer-dev", "server", "dependencies"],
-            "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+            "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
         },
 
         // Javascript(NPM)
@@ -46,7 +46,7 @@
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "npm",
             "labels": ["npm", "front", "dependencies"],
-            "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+            "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
         },
         {
             "enabled": true,
@@ -56,7 +56,7 @@
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "npm-dev",
             "labels": ["npm-dev", "front", "dependencies"],
-            "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+            "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
         },
 
         // GitHub Actions
@@ -68,13 +68,13 @@
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "github-actions",
             "labels": ["github-action", "ci", "dependencies"],
-            "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+            "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
         },
     ],
     // 脆弱性が検知された場合(スケジュール設定と関係なくアップデートされる)
     "vulnerabilityAlerts": {
         "labels": ["vulnerabilities", "dependencies"],
         "automerge": false,
-        "assignees": ["@hassyadai-kokada"], // 自動マージしない場合は担当者をアサインする
+        "assignees": ["@richellin"], // 自動マージしない場合は担当者をアサインする
     },
 }
