--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -14,6 +14,7 @@
         "enabled": false, // majorはアップデートしない(PRすら作成しない)
     },
     "labels": ["other", "dependencies"], // ルール以外のもので major ではないものが検知された場合のラベリング
+    "ignoreDeps": ["mysql"]
     "packageRules": [
         // PHP(Composer)
         {
@@ -64,7 +65,6 @@
             "enabled": true,
             "automerge": false,
             "matchPaths": [".github/**"],
-            "matchDatasources": ["github-tags"],
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"], // majorは対象としない
             "groupName": "github-actions",
             "labels": ["github-action", "ci", "dependencies"],
