--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-    "name": "test",
+    "name": "laravel/laravel",
     "type": "project",
-    "description": "test",
+    "description": "The Laravel Framework.",
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1.11"
+        "php": "^8.1.11",
+        "laravel/framework": "v8.83.26"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7"
